# Plattera

./: .gitignore  AGENTS.md  BUG_FIXES_ROUND_2.md  CONFIDENCE_HEATMAP_IMPLEMENTATION_GUIDE.md  CSS_ARCHITECTURE_DOCUMENTATION.md  DRAFT_EDITING_ARCHITECTURE.md  DRAFT_VERSIONING_ARCHITECTURE_ISSUE.md  FINAL_SELECTION_FLOW_DIAGRAM.md  FINAL_SELECTION_IMPLEMENTATION.md  FORMAT_RECONSTRUCTION_GUIDE.md  README.md  REDUNDANCY_IMPLEMENTATION_CHECKLIST.md  check_plss_columns.py  debug_alignment_logging.py  debug_backend.py  debug_format_mapping.py  debug_full_pipeline.py  debug_image_serving.py  debug_repetition_analysis.py  debug_section_mapping.py  debug_section_normalizer.py  debug_section_normalizer_detailed.py  debug_tokenization_comparison.py  debug_tokenization_side_by_side.py  inspect_plss_layers.py  project_plan.md  quick_test.py  sample_payload.json  test_alignment_api.py  test_api.py  test_bbox_debug.py  test_bbox_debug_mode.py  test_bbox_detection.py  test_bbox_only.py  test_bounding_box.py  test_bounding_box_api.py  test_consensus_draft_generator.py  test_corpus_virtual.py  test_endpoints.ps1  test_fixed_unified_path.py  (+8 more)
alignment_token_debug/: tokens_Draft_1.txt  tokens_Draft_3.txt
backend/: main.py  requirements.txt  test_final.py  test_pyproj_behavior.py
docs/: Evidence_First_Hybrid_Retrieval_for_Plattera.md  THIRD_PARTY_NOTICES.md  architecture-ethos.md  (+5 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: backend_lifecycle.rs  lib.rs  windows_job.rs
(+637 files in other folders)
