[package]
name = "app"
version = "0.9.2"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = "https://github.com/bwanedead/Plattera"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = ["devtools"] }
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1.0", features = ["full"] }
sysinfo = { version = "0.30", features = ["multithread"] }
ureq = { version = "2.9", default-features = false, features = ["tls", "json"] }
ctrlc = "3.4"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-devtools-app = { version = "2.0.0-rc", features = ["context-menu-inspector"] }
tauri-plugin-process = "2"
